Make sure all of condition placeholder is visible

--- a/src/app/query-term-node/query-term-node.component.css
+++ b/src/app/query-term-node/query-term-node.component.css
@@ -31,5 +31,5 @@ div.phenotype-condition-selector {
 .phenotype-condition-complete {
   margin-left: 1em;
   display: inline-block;
-  width: 25em;
+  width: 29em;
 }
